:sparkles: 新增捕获的异常类型